[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/fonts/font-data/font-read.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://game/ui/endgame-stats/FloorStats.gd" type="Script" id=2]
[ext_resource path="res://game/ui/endgame-stats/ExpLabel.gd" type="Script" id=3]
[ext_resource path="res://game/ui/endgame-stats/StatElement.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="FloorStats" type="VBoxContainer"]
margin_right = 450.0
margin_bottom = 162.0
rect_min_size = Vector2( 450, 0 )
custom_constants/separation = 20
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FloorName" type="Label" parent="."]
margin_right = 450.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Floor Name"
script = ExtResource( 4 )

[node name="NormalEncounters" type="HBoxContainer" parent="."]
margin_top = 62.0
margin_right = 450.0
margin_bottom = 88.0
script = ExtResource( 4 )

[node name="Label" type="Label" parent="NormalEncounters"]
margin_right = 257.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "STAT_NORMAL_ENCOUNTER"

[node name="Amount" type="Label" parent="NormalEncounters"]
margin_left = 261.0
margin_right = 273.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "X"

[node name="Exp" type="Label" parent="NormalEncounters"]
margin_left = 277.0
margin_right = 450.0
margin_bottom = 26.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0 XP"
align = 2
script = ExtResource( 3 )

[node name="EliteEncounters" type="HBoxContainer" parent="."]
margin_top = 108.0
margin_right = 450.0
margin_bottom = 134.0
script = ExtResource( 4 )

[node name="Label" type="Label" parent="EliteEncounters"]
margin_right = 229.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "STAT_ELITE_ENCOUNTER"

[node name="Amount" type="Label" parent="EliteEncounters"]
margin_left = 233.0
margin_right = 245.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "X"

[node name="Exp" type="Label" parent="EliteEncounters"]
margin_left = 249.0
margin_right = 450.0
margin_bottom = 26.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0 XP"
align = 2
script = ExtResource( 3 )

[node name="MonstersDefeated" type="HBoxContainer" parent="."]
margin_top = 154.0
margin_right = 450.0
margin_bottom = 180.0
script = ExtResource( 4 )

[node name="Label" type="Label" parent="MonstersDefeated"]
margin_right = 239.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "STAT_ENEMIES_DEFEATED"

[node name="Amount" type="Label" parent="MonstersDefeated"]
margin_left = 243.0
margin_right = 255.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "X"

[node name="Exp" type="Label" parent="MonstersDefeated"]
margin_left = 259.0
margin_right = 450.0
margin_bottom = 26.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0 XP"
align = 2
script = ExtResource( 3 )

[node name="ExplorationRate" type="HBoxContainer" parent="."]
margin_top = 200.0
margin_right = 450.0
margin_bottom = 226.0
script = ExtResource( 4 )

[node name="Label" type="Label" parent="ExplorationRate"]
margin_right = 183.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "STAT_EXPLORATION"

[node name="Amount" type="Label" parent="ExplorationRate"]
margin_left = 187.0
margin_right = 199.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "X"

[node name="Exp" type="Label" parent="ExplorationRate"]
margin_left = 203.0
margin_right = 450.0
margin_bottom = 26.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0 XP"
align = 2
script = ExtResource( 3 )

[node name="RegionClear" type="HBoxContainer" parent="."]
visible = false
margin_top = 166.0
margin_right = 450.0
margin_bottom = 192.0
script = ExtResource( 4 )

[node name="Label" type="Label" parent="RegionClear"]
margin_right = 125.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "REGION_CLEARED"

[node name="Exp" type="Label" parent="RegionClear"]
margin_left = 129.0
margin_right = 450.0
margin_bottom = 26.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0 XP"
align = 2
script = ExtResource( 3 )
